# causal-churn-agent

./: .gitignore  LICENSE  README.md  start.bat  start.ps1
data/: retention_brand_metrics_daily.csv  retention_customers.csv  retention_events.csv  shopify_retention_synthetic_dataset.csv
data/transcripts/: ea1a249a-36e3-478a-8bf5-a44b4781cb67.jsonl
nitiai/: .env.example  .gitignore  README.md  RETENTION_REASONING_AGENT_DESIGN.md  THESYS_EVALUATION.md  debug_agent.py  debug_output.txt  debug_output2.txt  pyproject.toml  requirements-dev.txt  requirements.txt
nitiai/examples/: simple_example.py
nitiai/src/retention_reasoning/: __init__.py  __main__.py  agent.py  api.py  chat_router.py  data_query.py
nitiai/src/retention_reasoning/models/: __init__.py  hypothesis.py  lever.py  opportunity.py  reasoning.py
nitiai/src/retention_reasoning/nodes/: __init__.py  causal_tester.py  confounder_analyzer.py  explanation_generator.py  hypothesis_generator.py  lever_estimator.py
nitiai/src/retention_reasoning/prompts/: __init__.py  hypothesis_generation.py
nitiai/src/retention_reasoning/tests/: conftest.py  test_agent_graph.py  test_chat_router.py
nitiai/src/retention_reasoning/utils/: __init__.py  causal_inference.py  statistical_tests.py
re/: .npmignore  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY_FIXES.md  SUMMARY.md  TEST_RESULTS.md  package-lock.json  package.json  tsconfig.json
re/docs/: ARCHITECTURE.md  GETTING_STARTED.md
re/examples/demo/: .env.example  index.html  package.json  test.html  tsconfig.json
re/examples/demo/src/: App.css  (+1 more)
