[tool.poetry]
name = "niti-retention-reasoning"
version = "0.1.0"
description = "Retention Reasoning Agent - Explainable causal AI for retention optimization"
authors = ["Niti AI <team@niti.ai>"]
readme = "README.md"
packages = [{include = "retention_reasoning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain = "^0.3.0"
langchain-google-genai = "^2.0.0"
langchain-anthropic = "^0.3.0"
dowhy = "^0.11.1"
statsmodels = "^0.14.0"
scikit-learn = "^1.4.0"
networkx = "^3.2"
polars = "^0.20.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
google-cloud-bigquery = "^3.14.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
httpx = "^0.26.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
ipython = "^8.20.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
